# simple-todo-c

./: CMakeLists.txt  DEBUGGING.md  README.md
.github/ISSUE_TEMPLATE/: config.yml
